man-db (2.4.2-20) UNRELEASED; urgency=low

  * Suggest less, since we have special support for it (closes: #280096).
  * Add support for cross-building (closes: #284856).
  * Update debconf translations:
    - Russian (thanks, Yuri Kozlov; part of #268584).

 -- Colin Watson <cjwatson@debian.org>  Sun,  7 Nov 2004 14:24:58 +0000

man-db (2.4.2-19) unstable; urgency=low

  * Fix database creation problems on systems with badly broken clocks set
    before the epoch (thanks to Martin Pitt for the hint; fixes #252425
    harder).

 -- Colin Watson <cjwatson@debian.org>  Thu, 22 Jul 2004 14:58:28 +0100

man-db (2.4.2-18) unstable; urgency=low

  * Fix out-of-order declarations in whatis.c (closes: #240089).
  * Update debconf translations:
    - Dutch (thanks, cobaco; closes: #260294).

 -- Colin Watson <cjwatson@debian.org>  Tue, 20 Jul 2004 01:40:20 +0100

man-db (2.4.2-17) unstable; urgency=low

  * debian/postinst, debian/postrm: Replace XSIish uses of 'test' with more
    portable code (thanks, David Weinehall; see #256279).
  * Synchronize logic for whether to ask build-database or rebuild-database
    between config and postinst (closes: #246545).
  * Don't fail to configure if mandb doesn't create any databases for
    whatever reason when running in the foreground (closes: #252425).
  * Policy version 3.6.1: no changes required.

 -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jun 2004 11:48:02 +0100

man-db (2.4.2-16) unstable; urgency=low

  * Update debconf translations:
    - Spanish (thanks, Carlos Valdivia Yagüe; closes: #247829).

 -- Colin Watson <cjwatson@debian.org>  Thu, 13 May 2004 19:19:53 +0100

man-db (2.4.2-15) unstable; urgency=medium

  * Add debconf translations:
    - Czech (thanks, Miroslav Kure; closes: #244422).
    - Polish (thanks, Robert Luberda; closes: #245056).
  * Update debconf translations:
    - German (thanks, Florian Ernst; closes: #244532).

 -- Colin Watson <cjwatson@debian.org>  Fri, 23 Apr 2004 01:30:38 +0100
