@@ -2,6 +2,9 @@ man-db (2.4.2-20) UNRELEASED; urgency=low
 
   * Suggest less, since we have special support for it (closes: #280096).
   * Add support for cross-building (closes: #284856).
+  * Restore the intended ability to use SECTIONS to move extensions out of
+    order with respect to their parent sections, broken while working around
+    #204249.
   * Update debconf translations:
     - Russian (thanks, Yuri Kozlov; part of #268584).
 
